# vdbs

./: CMakeLists.txt  README.md
scripts/: common.py  optest.py
src/: index_server.cpp  storage_server.cpp
src/config/: config.cpp
src/cuda/: CMakeLists.txt  dist_calculate.cuh  priority_queue.cuh  search_kernel.cu  search_kernel.cuh  utils.cuh
src/include/: config.h  gpu_memory_manager.h  index_engine.h  index_http_client.h  index_http_server.h  logger.h  memory_manager.h  rdma_common.h  rdma_pool.h  rdma_pools.h  storage_http_server.h
src/index_server/: gpu_memory_manager.cpp  index_engine.cpp  index_http_client.cpp  index_http_server.cpp
src/rdma/: rdma_common.cpp  rdma_pool.cpp  rdma_pools.cpp
src/storage_server/: storage_http_server.cpp
